# draft-denis-ipcrypt

./: .gitignore  .gitmodules  .note.xml  LICENSE.md  README.md  archive.json  draft-denis-ipcrypt.html  draft-denis-ipcrypt.md  draft-denis-ipcrypt.txt  index.html
.github/: CODEOWNERS
draft-denis-ipcrypt-00/: draft-denis-ipcrypt.html  draft-denis-ipcrypt.txt  index.html
draft-denis-ipcrypt-01/: index.html
draft-denis-ipcrypt-02/: draft-denis-ipcrypt.html  draft-denis-ipcrypt.txt  index.html
draft-denis-ipcrypt-03/: draft-denis-ipcrypt.html  index.html
draft-denis-ipcrypt-04/: draft-denis-ipcrypt.txt  index.html
draft-denis-ipcrypt-05/: draft-denis-ipcrypt.html  draft-denis-ipcrypt.txt  index.html
draft-denis-ipcrypt-06/: index.html
draft-denis-ipcrypt-07/: index.html
draft-denis-ipcrypt-08/: draft-denis-ipcrypt.txt  index.html
draft-denis-ipcrypt-09/: index.html
draft-denis-ipcrypt-10/: draft-denis-ipcrypt.txt  index.html
draft-denis-ipcrypt-11/: draft-denis-ipcrypt.txt  index.html
draft-denis-ipcrypt-12/: draft-denis-ipcrypt.html  index.html
draft-denis-ipcrypt-13/: draft-denis-ipcrypt.txt  index.html
implementations/python/: generate_test_vectors.py  ipcrypt_deterministic.py  ipcrypt_nd.py  ipcrypt_pfx.py  pyproject.toml  test_vectors.json  verify_test_vectors.py
implementations/python/ipcrypt/: __init__.py  pfx.py
reference-implementations/: generate_test_vectors.py  ipcrypt_deterministic.py  ipcrypt_nd.py  ipcrypt_ndx.py  verify_test_vectors.py
